--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,5 +43,6 @@ jobs:
           echo "schema = '${SNOWFLAKE_SCHEMA}'" >> ~/.snowflake/config.toml
           chmod 0600 ~/.snowflake/config.toml
           snow connection test -c defaultconnection
+          snow app validate -c defaultconnection
           snow app run -c defaultconnection
-          snow sql -q "call snowflake_data_checker.core.hello()" -c defaultconnection
+          snow sql -q "call snowflake_data_checker.core_code_public.ping()" -c defaultconnection
